# mdns-sd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  test.cmd
.github/workflows/: build.yml
examples/: query.rs  register.rs
mdns-parser/: Cargo.toml  README.md
mdns-parser/src/: dns_parser.rs  lib.rs
src/: dns_cache.rs  dns_parser.rs  error.rs  lib.rs  plugin.rs  service_daemon.rs  service_info.rs
tests/: addr_parse.rs  mdns_test.rs  shutdown_test.rs
