[package]
name = "mdns-sd"
version = "0.17.0"
authors = ["keepsimple <keepsimple@gmail.com>"]
edition = "2018"
rust-version = "1.71.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/keepsimple1/mdns-sd"
documentation = "https://docs.rs/mdns-sd"
keywords = ["mdns", "service-discovery", "zeroconf", "dns-sd"]
categories = ["network-programming"]
description = "mDNS Service Discovery library with no async runtime dependency"

[features]
async = ["flume/async"]
logging = ["log"]
default = ["async", "logging"]

[dependencies]
fastrand = "2.3"
flume = { version = "0.11", default-features = false } # channel between threads
if-addrs = { version = "0.14", features = ["link-local"] } # get local IP addresses
log = { version = "0.4", optional = true }             # logging
mio = { version = "1.1", features = ["os-poll", "net"] }  # select/poll sockets
socket2 = { version = "0.6", features = ["all"] }      # socket APIs
socket-pktinfo = "0.3.2"

[dev-dependencies]
env_logger = { version = "= 0.10.2", default-features = false, features= ["humantime"] }
fastrand = "2.3"
humantime = "2.1"
test-log = "= 0.2.14"
test-log-macros = "= 0.2.14"
